add de and es properties
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@832 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/converter/converter_es.properties
+++ b/properties/com/jidesoft/converter/converter_es.properties
@@ -3,3 +3,18 @@
 
 Boolean.true=Verdadero
 Boolean.false=Falso
+
+#
+#Strings for FontConverter
+#
+Font.plain=Sin formato
+Font.bold=Cursiva
+Font.italic=Cursiva
+Font.boldItalic=CursivaNegrita
+
+#
+#Strings for QuarterConverter
+#
+Quarter.quarter=Cuarto {0}
+#Please note, there is a space at the end of Qtr.
+
