--- a/properties/com/jidesoft/dialog/buttons_de.properties
+++ b/properties/com/jidesoft/dialog/buttons_de.properties
@@ -15,7 +15,7 @@ Button.clear=L\u00f6schen
 Button.clear.mnemonic=L
 
 Button.close=Schlie\u00dfen
-Button.close.mnemonic=C
+Button.close.mnemonic=S
 
 Button.continue=Fortfahren
 Button.continue.mnemonic=F
