--- a/properties/com/jidesoft/dialog/buttons_es.properties
+++ b/properties/com/jidesoft/dialog/buttons_es.properties
@@ -6,16 +6,16 @@ Button.apply=Aplicar
 Button.apply.mnemonic=A
 
 Button.back=< Atr\u00e1s
-Button.back.mnemonic=B
+Button.back.mnemonic=T
 
 Button.browse=Navegar
-Button.browse.mnemonic=B
+Button.browse.mnemonic=V
 
 Button.clear=Borrar
-Button.clear.mnemonic=C
+Button.clear.mnemonic=O
 
 Button.close=Cerrar
-Button.close.mnemonic=C
+Button.close.mnemonic=R
 
 Button.continue=Continuar
 Button.continue.mnemonic=C
@@ -24,55 +24,55 @@ Button.edit=Editar
 Button.edit.mnemonic=E
 
 Button.exit=Salir
-Button.exit.mnemonic=X
+Button.exit.mnemonic=S
 
 Button.find=Buscar
-Button.find.mnemonic=F
+Button.find.mnemonic=B
 
 Button.findNext=Buscar siguiente
-Button.findNext.mnemonic=N
+Button.findNext.mnemonic=G
 
 Button.finish=Finalizar
 Button.finish.mnemonic=F
 
 Button.forward=Continuar
-Button.forward.mnemonic=F
+Button.forward.mnemonic=C
 
 Button.goback=Ir atr\u00e1s
-Button.goback.mnemonic=G
+Button.goback.mnemonic=I
 
 Button.help=Ayuda
-Button.help.mnemonic=H
+Button.help.mnemonic=Y
 
 Button.new=Nuevo
 Button.new.mnemonic=N
 
 Button.next=Siguiente >
-Button.next.mnemonic=N
+Button.next.mnemonic=S
 
 Button.open=Abrir
-Button.open.mnemonic=O
+Button.open.mnemonic=A
 
 Button.print=Imprimir
-Button.print.mnemonic=P
+Button.print.mnemonic=I
 
 Button.replace=Remplazar
-Button.replace.mnemonic=R
+Button.replace.mnemonic=Z
 
 Button.retry=Reintentar
 Button.retry.mnemonic=R
 
 Button.run=Ejecutar
-Button.run.mnemonic=R
+Button.run.mnemonic=E
 
 Button.save=Guardar
-Button.save.mnemonic=S
+Button.save.mnemonic=G
 
 Button.saveAs=Guardar como
-Button.saveAs.mnemonic=A
+Button.saveAs.mnemonic=G
 
 Button.stop=Detener
-Button.stop.mnemonic=S
+Button.stop.mnemonic=E
 
 Button.showDetails=Detalles >>
 Button.showDetails.mnemonic=D
