--- a/properties/com/jidesoft/plaf/basic/basic_de.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_de.properties
@@ -11,7 +11,7 @@ DockableFrameTitlePane.closeTooltip=Schlie\u00dfen
 
 DockableFrameTitlePane.hideAutohideText=Ausblenden
 DockableFrameTitlePane.hideAutohideMnemonic=A
-DockableFrameTitlePane.hideAutohideTooltip=Aktives automatisch ausblendbares Fenster ausblenden
+DockableFrameTitlePane.hideAutohideTooltip=Aktives Fenster ausblenden
 
 DockableFrameTitlePane.floatingText=Unverankert
 DockableFrameTitlePane.floatingMnemonic=U
@@ -35,16 +35,16 @@ DockableFrameTitlePane.maximizeTooltip=Maximieren/Wiederherstellen
 #
 DockableFrameTitlePane.dockableText=Andockbar
 DockableFrameTitlePane.dockableMnemonic=N
-DockableFrameTitlePane.dockableTooltip=Andockbar umschalten
+DockableFrameTitlePane.dockableTooltip=Andockbar ein/aus
 
 DockableFrameTitlePane.hidableText=Ausblendbar
 DockableFrameTitlePane.hidableMnemonic=L
 
 DockableFrameTitlePane.floatableText=Verschiebbar
-DockableFrameTitlePane.floatableMnemonic=H
+DockableFrameTitlePane.floatableMnemonic=V
 
 DockableFrameTitlePane.autohidableText=Automatisch ausblendbar
-DockableFrameTitlePane.autohidableMnemonic=T
+DockableFrameTitlePane.autohidableMnemonic=A
 
 #
 # Strings for Undo
@@ -64,6 +64,6 @@ CollapsiblePane.collapseToolTip=Inhalt erweitern oder zusammenfassen
 # Strings for JideTabbedPane
 #
 JideTabbedPane.scrollBackward=Zur\u00fcck scrollen
-JideTabbedPane.scrollForward=Vor scrollen
+JideTabbedPane.scrollForward=Vorw\u00e4rts scrollen
 JideTabbedPane.showList=Liste anzeigen
 JideTabbedPane.close=Schliessen
