--- a/properties/com/jidesoft/plaf/basic/basic_es.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_es.properties
@@ -11,7 +11,7 @@ DockableFrameTitlePane.closeTooltip=Cerrar
 
 DockableFrameTitlePane.hideAutohideText=Ocultar
 DockableFrameTitlePane.hideAutohideMnemonic=O
-DockableFrameTitlePane.hideAutohideTooltip=Oculta la ventana de ocultaci\u00f3n autom\u00e1tica activa
+DockableFrameTitlePane.hideAutohideTooltip=Ocultar la ventana de ocultaci\u00f3n autom\u00e1tica activa
 
 DockableFrameTitlePane.floatingText=Flotante
 DockableFrameTitlePane.floatingMnemonic=A
@@ -58,3 +58,11 @@ Undo.toggleAutohide=Modo Alternar ocultar autom\u00e1ticamente/acoplar
 #
 CollapsiblePane.collapseText=Expandir/contraer
 CollapsiblePane.collapseToolTip=Expandir o contraer el contenido
+
+# Strings for JideTabbedPane
+#
+JideTabbedPane.scrollBackward=Retroceder
+JideTabbedPane.scrollForward=Avanzar
+JideTabbedPane.showList=Mostrar lista
+JideTabbedPane.close=Cerrar
+
