--- a/properties/com/jidesoft/swing/swing_es.properties
+++ b/properties/com/jidesoft/swing/swing_es.properties
@@ -12,8 +12,8 @@ SearchableBar.findNext=Buscar siguiente
 SearchableBar.findNext.mnemonic=N
 SearchableBar.findNext.tooltip=Buscar la siguiente aparici\u00f3n de la frase
 SearchableBar.findPrevious=Encontrar anterior
-SearchableBar.findPrevious.mnemonic=P
-SearchableBar.findPrevious.tooltip=Buscar la anterior aparici\u00f3n de la frase
+SearchableBar.findPrevious.mnemonic=A
+SearchableBar.findPrevious.tooltip=Buscar la aparici\u00f3n anterior de la frase
 SearchableBar.highlights=Subrayar
 SearchableBar.highlights.mnemonic=H
 SearchableBar.highlights.tooltip=Subraya todas las apariciones de la frase
