--- a/properties/com/jidesoft/converter/converter_de.properties
+++ b/properties/com/jidesoft/converter/converter_de.properties
@@ -15,5 +15,5 @@ Font.boldItalic=Fett kursiv
 #
 #Strings for QuarterConverter
 #
-Quarter.quarter=Viertel {0}
+Quarter.quarter=Quartal {0}
 #Plesae note, there is a space at the end of Qtr.
