revise a de translation
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1030 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/plaf/basic/basic_de.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_de.properties
@@ -13,9 +13,9 @@ DockableFrameTitlePane.hideAutohideText=Ausblenden
 DockableFrameTitlePane.hideAutohideMnemonic=A
 DockableFrameTitlePane.hideAutohideTooltip=Aktives Fenster ausblenden
 
-DockableFrameTitlePane.floatingText=Unverankert
-DockableFrameTitlePane.floatingMnemonic=U
-DockableFrameTitlePane.floatingTooltip=Unverankert ein/aus
+DockableFrameTitlePane.floatingText=An/Abdocken
+DockableFrameTitlePane.floatingMnemonic=N
+DockableFrameTitlePane.floatingTooltip=An/Abdocken
 
 DockableFrameTitlePane.autohideText=Automatisch ausblenden
 DockableFrameTitlePane.autohideMnemonic=B
