Common,B,basic_de.properties,Fixed several Germany translation issue,37606
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1059 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/plaf/basic/basic_de.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_de.properties
@@ -13,9 +13,9 @@ DockableFrameTitlePane.hideAutohideText=Ausblenden
 DockableFrameTitlePane.hideAutohideMnemonic=A
 DockableFrameTitlePane.hideAutohideTooltip=Aktives Fenster ausblenden
 
-DockableFrameTitlePane.floatingText=An/Abdocken
-DockableFrameTitlePane.floatingMnemonic=N
-DockableFrameTitlePane.floatingTooltip=An/Abdocken
+DockableFrameTitlePane.floatingText=An-/Abdocken
+DockableFrameTitlePane.floatingMnemonic=D
+DockableFrameTitlePane.floatingTooltip=An-/Abdocken
 
 DockableFrameTitlePane.autohideText=Automatisch ausblenden
 DockableFrameTitlePane.autohideMnemonic=B
