--- a/properties/com/jidesoft/swing/swing_de.properties
+++ b/properties/com/jidesoft/swing/swing_de.properties
@@ -18,8 +18,8 @@ SearchableBar.findPrevious.tooltip=Vorheriges Auftreten des Ausdrucks suchen
 SearchableBar.highlights=Hervorheben
 SearchableBar.highlights.mnemonic=H
 SearchableBar.highlights.tooltip=Jedes Auftreten des Ausdrucks hervorheben
-SearchableBar.matchCase=Schreibung anpassen
-SearchableBar.matchCase.mnemonic=S
+SearchableBar.matchCase=Groﬂ-/Kleinschreibung
+SearchableBar.matchCase.mnemonic=K
 SearchableBar.repeats=Wiederholung
 SearchableBar.repeats.mnemonic=w
 
