Fixed translation error
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1234 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/plaf/basic/basic_pl.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_pl.properties
@@ -34,6 +34,7 @@ DockableFrameTitlePane.maximizeTooltip=Maksymalizuj/przywr\u00f3\u0107
 #
 DockableFrameTitlePane.dockableText=Dokowalne
 DockableFrameTitlePane.dockableMnemonic=D
+DockableFrameTitlePane.dockableTooltip=Prze\u0142\u0105cz dokowanie
 
 DockableFrameTitlePane.hidableText=Ukrywalne
 DockableFrameTitlePane.hidableMnemonic=U
@@ -51,9 +52,19 @@ Undo.dragging=Przeci\u0105gni\u0119cie
 Undo.hide=Ukryj
 Undo.toggle=Prze\u0142\u0105cz pomi\u0119dzy swobodnym przesuwaniem/dokowaniem
 Undo.toggleAutohide=Prze\u0142\u0105cz pomi\u0119dzy zwijaniem/dokowaniem
+Undo.resizing=Rozszerzanie
+Undo.moving=Przesuwanie
 
 #
 # Strings for CollapsiblePane
 #
 CollapsiblePane.collapseText=Rozwi\u0144/Zwi\u0144
 CollapsiblePane.collapseToolTip=Rozwija lub rozwija zawarto\u015b\u0107
+
+#
+# Strings for JideTabbedPane
+#
+JideTabbedPane.scrollBackward=Przejd\u017a w ty\u0142
+JideTabbedPane.scrollForward=Przejd\u017a w prz\u00f3d
+JideTabbedPane.showList=Poka\u017c list\u0119
+JideTabbedPane.close=Zamknij
