Dock,B,DockingManager,Fixed maximize/restore action doesn't create an undo entry,42670,no
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1298 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/plaf/basic/basic_da.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_da.properties
@@ -48,10 +48,12 @@ DockableFrameTitlePane.autohidableMnemonic=U
 #
 # Strings for Undo
 #
-Undo.dragging=Tr\u00E6k
+Undo.dragging=Tr\u00e6k
 Undo.hide=Skjul
 Undo.toggle=Skift Flydende/Docking
 Undo.toggleAutohide=Skift Autoskjul/Docking
+Undo.maximize=Maksim\u00e9r
+Undo.restore=Gendan
 
 #
 # Strings for CollapsiblePane
