--- a/properties/com/jidesoft/plaf/basic/basic_de.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_de.properties
@@ -53,6 +53,8 @@ Undo.dragging=Ziehen
 Undo.hide=Ausblenden
 Undo.toggle=Schwebe-/Andockmodus ein/aus
 Undo.toggleAutohide=Autom. Ausblend-/Andockmodus ein/aus
+Undo.maximize=Maximieren
+Undo.restore=Wiederherstellen
 
 #
 # Strings for CollapsiblePane
