--- a/properties/com/jidesoft/plaf/basic/basic_en.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_en.properties
@@ -69,5 +69,7 @@ JideTabbedPane.scrollBackward=Scroll Backward
 JideTabbedPane.scrollForward=Scroll Forward
 JideTabbedPane.showList=Show List
 JideTabbedPane.close=Close
+Undo.maximize=Maximize
+Undo.restore=Restore
 
 
