--- a/properties/com/jidesoft/plaf/basic/basic_es.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_es.properties
@@ -52,6 +52,8 @@ Undo.dragging=Arrastrar
 Undo.hide=Ocultar
 Undo.toggle=Modo Alternar flotante/acoplable
 Undo.toggleAutohide=Modo Alternar ocultar autom\u00e1ticamente/acoplar
+Undo.maximize=Maximizar
+Undo.restore=Restaurar
 
 #
 # Strings for CollapsiblePane
