--- a/properties/com/jidesoft/plaf/basic/basic_fr.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_fr.properties
@@ -52,6 +52,8 @@ Undo.dragging=Glissement
 Undo.hide=Masquer
 Undo.toggle=Basculer entre mode flottant/ancr\u00e9
 Undo.toggleAutohide=Basculer entre mode masqu\u00e9 automatiquement/ancr\u00e9
+Undo.maximize=Agrandir
+Undo.restore=Restaurer
 
 ##
 # Strings for CollapsiblePane
