--- a/properties/com/jidesoft/plaf/basic/basic_nl.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_nl.properties
@@ -49,6 +49,8 @@ Undo.dragging=Slepen
 Undo.hide=Verbergen
 Undo.toggle=Modus Zwevend/Vergrendeld in-/uitschakelen
 Undo.toggleAutohide=Modus Automatisch verbergen/Vergrendelen in-/uitschakelen
+Undo.maximize=Maximaliseren
+Undo.restore=Vorig formaat
 
 #
 # Strings for CollapsiblePane
