--- a/properties/com/jidesoft/plaf/basic/basic_no.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_no.properties
@@ -52,6 +52,8 @@ Undo.dragging=Trekk
 Undo.hide=Skjul
 Undo.toggle=Skift Flytende/Dokking
 Undo.toggleAutohide=Skift Autoskjul/Dokking
+Undo.maximize=Maksimer
+Undo.restore=Gjendanne
 
 #
 # Strings for CollapsiblePane
@@ -66,5 +68,6 @@ JideTabbedPane.scrollBackward=Rull tilbake
 JideTabbedPane.scrollForward=Rull frem
 JideTabbedPane.showList=Vis Liste
 JideTabbedPane.close=Lukk
+
 
 
