--- a/properties/com/jidesoft/plaf/basic/basic_pt.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_pt.properties
@@ -46,6 +46,8 @@ Undo.dragging=Arrastar
 Undo.hide=Ocultar
 Undo.toggle=Alternar modo flutuante/fixo
 Undo.toggleAutohide=Alternar modo ocultamento autom\u00e1tico/fixo
+Undo.maximize=Maximizar
+Undo.restore=Restaurar
 
 #
 # Strings for CollapsiblePane
