--- a/properties/com/jidesoft/plaf/basic/basic_zh_CN.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_zh_CN.properties
@@ -1,32 +1,37 @@
-DockableFrameTitlePane.closeText=\u5173\u95ed
+DockableFrameTitlePane.closeText=\u5173\u95ed(C)
 DockableFrameTitlePane.closeMnemonic=C
 DockableFrameTitlePane.closeTooltip=\u5173\u95ed
-DockableFrameTitlePane.hideAutohideText=\u9690\u85cf
+DockableFrameTitlePane.hideAutohideText=\u9690\u85cf(H)
 DockableFrameTitlePane.hideAutohideMnemonic=H
 DockableFrameTitlePane.hideAutohideTooltip=\u9690\u85cf\u6d3b\u52a8\u7684\u81ea\u52a8\u9690\u85cf\u7a97\u53e3
-DockableFrameTitlePane.floatingText=\u6d6e\u52a8
+DockableFrameTitlePane.floatingText=\u6d6e\u52a8(F)
 DockableFrameTitlePane.floatingMnemonic=F
 DockableFrameTitlePane.floatingTooltip=\u5207\u6362\u6d6e\u52a8
-DockableFrameTitlePane.autohideText=\u81ea\u52a8\u9690\u85cf
+DockableFrameTitlePane.autohideText=\u81ea\u52a8\u9690\u85cf(A)
 DockableFrameTitlePane.autohideMnemonic=A
 DockableFrameTitlePane.autohideTooltip=\u5207\u6362\u81ea\u52a8\u9690\u85cf
-DockableFrameTitlePane.maximizeText=\u6700\u5927\u5316
+DockableFrameTitlePane.maximizeText=\u6700\u5927\u5316(M)
 DockableFrameTitlePane.maximizeMnemonic=M
 DockableFrameTitlePane.maximizeTooltip=\u6700\u5927\u5316\uff0f\u8fd8\u539f
-DockableFrameTitlePane.restoreText=\u8fd8\u539f
+DockableFrameTitlePane.restoreText=\u8fd8\u539f(R)
 DockableFrameTitlePane.restoreMnemonic=R
-DockableFrameTitlePane.dockableText=\u53ef\u505c\u9760
+DockableFrameTitlePane.dockableText=\u53ef\u505c\u9760(D)
 DockableFrameTitlePane.dockableMnemonic=D
-DockableFrameTitlePane.hidableText=\u53ef\u9690\u85cf
+DockableFrameTitlePane.dockableTooltip=\u5207\u6362\u53ef\u505c\u9760
+DockableFrameTitlePane.hidableText=\u53ef\u9690\u85cf(I)
 DockableFrameTitlePane.hidableMnemonic=I
-DockableFrameTitlePane.floatableText=\u53ef\u6d6e\u52a8
+DockableFrameTitlePane.floatableText=\u53ef\u6d6e\u52a8(L)
 DockableFrameTitlePane.floatableMnemonic=L
-DockableFrameTitlePane.autohidableText=\u53ef\u81ea\u52a8\u9690\u85cf
+DockableFrameTitlePane.autohidableText=\u53ef\u81ea\u52a8\u9690\u85cf(U)
 DockableFrameTitlePane.autohidableMnemonic=U
 Undo.dragging=\u62d6\u52a8
 Undo.hide=\u9690\u85cf
 Undo.toggle=\u5207\u6362\u6d6e\u52a8\uff0f\u505c\u9760\u6a21\u5f0f
 Undo.toggleAutohide=\u5207\u6362\u81ea\u52a8\u9690\u85cf\uff0f\u505c\u9760\u6a21\u5f0f
+Undo.maximize=\u6700\u5927\u5316
+Undo.restore=\u8fd8\u539f
+Undo.resizing=\u7f29\u653e
+Undo.moving=\u79fb\u52a8
 CollapsiblePane.collapseText=\u5c55\u5f00\uff0f\u6298\u53e0
 CollapsiblePane.collapseToolTip=\u5c55\u5f00\u6216\u6298\u53e0\u5185\u5bb9
 JideTabbedPane.scrollBackward=\u5411\u524d\u6eda\u52a8
