--- a/properties/com/jidesoft/plaf/basic/basic_zh_TW.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_zh_TW.properties
@@ -1,32 +1,39 @@
-DockableFrameTitlePane.closeText=\u95dc\u9589
+DockableFrameTitlePane.closeText=\u95dc\u9589(C)
 DockableFrameTitlePane.closeMnemonic=C
 DockableFrameTitlePane.closeTooltip=\u95dc\u9589
-DockableFrameTitlePane.hideAutohideText=\u96b1\u85cf
+DockableFrameTitlePane.hideAutohideText=\u96b1\u85cf(H)
 DockableFrameTitlePane.hideAutohideMnemonic=H
 DockableFrameTitlePane.hideAutohideTooltip=\u96b1\u85cf\u73fe\u7528\u81ea\u52d5\u96b1\u85cf\u8996\u7a97
-DockableFrameTitlePane.floatingText=\u6d6e\u52d5
+DockableFrameTitlePane.floatingText=\u6d6e\u52d5(F)
 DockableFrameTitlePane.floatingMnemonic=F
 DockableFrameTitlePane.floatingTooltip=\u5207\u63db\u6d6e\u52d5
-DockableFrameTitlePane.autohideText=\u81ea\u52d5\u96b1\u85cf
+DockableFrameTitlePane.autohideText=\u81ea\u52d5\u96b1\u85cf(A)
 DockableFrameTitlePane.autohideMnemonic=A
 DockableFrameTitlePane.autohideTooltip=\u5207\u63db\u81ea\u52d5\u96b1\u85cf
-DockableFrameTitlePane.maximizeText=\u6700\u5927\u5316
+DockableFrameTitlePane.maximizeText=\u6700\u5927\u5316(M)
 DockableFrameTitlePane.maximizeMnemonic=M
 DockableFrameTitlePane.maximizeTooltip=\u6700\u5927\u5316/\u9084\u539f
-DockableFrameTitlePane.restoreText=\u9084\u539f
+DockableFrameTitlePane.restoreText=\u9084\u539f(R)
 DockableFrameTitlePane.restoreMnemonic=R
-DockableFrameTitlePane.dockableText=\u53ef\u505c\u99d0
+DockableFrameTitlePane.dockableText=\u53ef\u505c\u99d0(D)
 DockableFrameTitlePane.dockableMnemonic=D
-DockableFrameTitlePane.hidableText=\u53ef\u96b1\u85cf
+DockableFrameTitlePane.dockableTooltip=\u5207\u63db\u53ef\u505c\u99d0
+DockableFrameTitlePane.hidableText=\u53ef\u96b1\u85cf(I)
 DockableFrameTitlePane.hidableMnemonic=I
-DockableFrameTitlePane.floatableText=\u53ef\u6d6e\u52d5
+DockableFrameTitlePane.floatableText=\u53ef\u6d6e\u52d5(L)
 DockableFrameTitlePane.floatableMnemonic=L
-DockableFrameTitlePane.autohidableText=\u53ef\u81ea\u52d5\u96b1\u85cf
+DockableFrameTitlePane.autohidableText=\u53ef\u81ea\u52d5\u96b1\u85cf(U)
 DockableFrameTitlePane.autohidableMnemonic=U
 Undo.dragging=\u62d6\u66f3
 Undo.hide=\u96b1\u85cf
 Undo.toggle=\u5207\u63db\u6d6e\u52d5/\u505c\u99d0\u6a21\u5f0f
+Undo.maximize=\u6700\u5927\u5316
+Undo.restore=\u9084\u539f
+Undo.resizing=\u7e2e\u653e
+Undo.moving=\u79fb\u52d5
 Undo.toggleAutohide=\u5207\u63db\u81ea\u52d5\u96b1\u85cf/\u505c\u99d0\u6a21\u5f0f
 CollapsiblePane.collapseText=\u5c55\u958b/\u6536\u5408
 CollapsiblePane.collapseToolTip=\u5c55\u958b\u6216\u6536\u5408\u5167\u5bb9
-JideTabbedPane.close=
+JideTabbedPane.close=\u95dc\u9589
+JideTabbedPane.scrollBackward=\u524d\u6efe
+JideTabbedPane.scrollForward=\u540e\u6efe
