--- a/properties/com/jidesoft/plaf/basic/basic_it.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_it.properties
@@ -52,6 +52,8 @@ Undo.dragging=Trascinamento
 Undo.hide=Nascondi
 Undo.toggle=Attiva/disattiva modalit\u00e0 mobile/ancoraggio
 Undo.toggleAutohide=Attiva disattiva modalit\u00e0 occultamento automatico/ancoraggio
+Undo.maximize=Ingrandisci
+Undo.restore=Ripristina
 
 #
 # Strings for CollapsiblePane
