--- a/properties/com/jidesoft/plaf/basic/basic_ja.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_ja.properties
@@ -53,6 +53,8 @@ Undo.dragging=Dragging
 Undo.hide=Hide
 Undo.toggle=Toggle Floating/Docking Mode
 Undo.toggleAutohide=Toggle Autohidden/Docking Mode
+Undo.maximize=\u6700\u5927\u5316
+Undo.restore=\u5143\u306e\u30b5\u30a4\u30ba\u306b\u623b\u3059
 #### End of TO BE TRANSLATED ###
 
 #
