--- a/properties/com/jidesoft/plaf/basic/basic_ko.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_ko.properties
@@ -49,6 +49,8 @@ Undo.dragging=\ub04c\uae30
 Undo.hide=\uc228\uae30\uae30
 Undo.toggle=\ubd80\ub3d9/\ub3c4\ud0b9 \ubaa8\ub4dc \uc804\ud658
 Undo.toggleAutohide=\uc790\ub3d9 \uc228\uae40/\ub3c4\ud0b9 \ubaa8\ub4dc \uc804\ud658
+Undo.maximize=\ucd5c\ub300\ud654
+Undo.restore=\ubcf5\uc6d0
 
 #
 # Strings for CollapsiblePane
