--- a/properties/com/jidesoft/plaf/basic/basic_pl.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_pl.properties
@@ -52,6 +52,8 @@ Undo.dragging=Przeci\u0105gni\u0119cie
 Undo.hide=Ukryj
 Undo.toggle=Prze\u0142\u0105cz pomi\u0119dzy swobodnym przesuwaniem/dokowaniem
 Undo.toggleAutohide=Prze\u0142\u0105cz pomi\u0119dzy zwijaniem/dokowaniem
+Undo.maximize=Maksymalizuj
+Undo.restore=Przywr\u00f3\u0107
 Undo.resizing=Rozszerzanie
 Undo.moving=Przesuwanie
 
@@ -68,3 +70,4 @@ JideTabbedPane.scrollBackward=Przejd\u017a w ty\u0142
 JideTabbedPane.scrollForward=Przejd\u017a w prz\u00f3d
 JideTabbedPane.showList=Poka\u017c list\u0119
 JideTabbedPane.close=Zamknij
+
