Common,B,basic_it.properties,Added some translations into the project,,no
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1429 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/plaf/basic/basic_da.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_da.properties
@@ -35,6 +35,7 @@ DockableFrameTitlePane.maximizeTooltip=Maksim\u00e9r/Gendan
 #
 DockableFrameTitlePane.dockableText=Kan dockes
 DockableFrameTitlePane.dockableMnemonic=D
+DockableFrameTitlePane.dockableTooltip=Forankring til/fra
 
 DockableFrameTitlePane.hidableText=Kan skjules
 DockableFrameTitlePane.hidableMnemonic=K
@@ -52,6 +53,8 @@ Undo.dragging=Tr\u00e6k
 Undo.hide=Skjul
 Undo.toggle=Skift Flydende/Docking
 Undo.toggleAutohide=Skift Autoskjul/Docking
+Undo.resizing=Tilpasser st\u00e6srelse
+Undo.moving=Flytter
 Undo.maximize=Maksim\u00e9r
 Undo.restore=Gendan
 
