--- a/properties/com/jidesoft/plaf/basic/basic_de.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_de.properties
@@ -55,6 +55,8 @@ Undo.toggle=Schwebe-/Andockmodus ein/aus
 Undo.toggleAutohide=Autom. Ausblend-/Andockmodus ein/aus
 Undo.maximize=Maximieren
 Undo.restore=Wiederherstellen
+Undo.resizing=Gr\u00f6\u00dfe \u00e4ndern
+Undo.moving=Verschieben
 
 #
 # Strings for CollapsiblePane
