--- a/properties/com/jidesoft/plaf/basic/basic_es.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_es.properties
@@ -54,6 +54,8 @@ Undo.toggle=Modo Alternar flotante/acoplable
 Undo.toggleAutohide=Modo Alternar ocultar autom\u00e1ticamente/acoplar
 Undo.maximize=Maximizar
 Undo.restore=Restaurar
+Undo.resizing=Cambiar tama
+Undo.moving=Mover
 
 #
 # Strings for CollapsiblePane
