--- a/properties/com/jidesoft/plaf/basic/basic_nl.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_nl.properties
@@ -51,6 +51,8 @@ Undo.toggle=Modus Zwevend/Vergrendeld in-/uitschakelen
 Undo.toggleAutohide=Modus Automatisch verbergen/Vergrendelen in-/uitschakelen
 Undo.maximize=Maximaliseren
 Undo.restore=Vorig formaat
+Undo.resizing=Afmetingen aanpassen
+Undo.moving=Verplaatsen
 
 #
 # Strings for CollapsiblePane
