--- a/properties/com/jidesoft/plaf/basic/basic_no.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_no.properties
@@ -54,6 +54,8 @@ Undo.toggle=Skift Flytende/Dokking
 Undo.toggleAutohide=Skift Autoskjul/Dokking
 Undo.maximize=Maksimer
 Undo.restore=Gjendanne
+Undo.resizing=Skalere
+Undo.moving=Flytte
 
 #
 # Strings for CollapsiblePane
