--- a/properties/com/jidesoft/plaf/basic/basic_pt.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_pt.properties
@@ -48,6 +48,8 @@ Undo.toggle=Alternar modo flutuante/fixo
 Undo.toggleAutohide=Alternar modo ocultamento autom\u00e1tico/fixo
 Undo.maximize=Maximizar
 Undo.restore=Restaurar
+Undo.resizing=Redimensionar
+Undo.moving=Mover
 
 #
 # Strings for CollapsiblePane
