--- a/properties/com/jidesoft/plaf/basic/basic_sv.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_sv.properties
@@ -48,6 +48,7 @@ Undo.toggle=V\u00e4xla flytande l\u00e4ge/dockningsl\u00e4ge
 Undo.toggleAutohide=V\u00e4xla autod\u00f6ljl\u00e4ge/dockningsl\u00e4ge
 Undo.maximize=Maximera
 Undo.restore=\u00c5terst\u00e4ll
+Undo.moving=Flyttar
 
 #
 # Strings for CollapsiblePane
