--- a/properties/com/jidesoft/plaf/basic/basic_fr.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_fr.properties
@@ -54,6 +54,7 @@ Undo.toggle=Basculer entre mode flottant/ancr\u00e9
 Undo.toggleAutohide=Basculer entre mode masqu\u00e9 automatiquement/ancr\u00e9
 Undo.maximize=Agrandir
 Undo.restore=Restaurer
+Undo.resizing=Redimensionnement
 
 ##
 # Strings for CollapsiblePane
