--- a/properties/com/jidesoft/plaf/basic/basic_it.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_it.properties
@@ -54,6 +54,8 @@ Undo.toggle=Attiva/disattiva modalit\u00e0 mobile/ancoraggio
 Undo.toggleAutohide=Attiva disattiva modalit\u00e0 occultamento automatico/ancoraggio
 Undo.maximize=Ingrandisci
 Undo.restore=Ripristina
+Undo.resizing=Ridimensionamento
+Undo.moving=Spostamento
 
 #
 # Strings for CollapsiblePane
