--- a/properties/com/jidesoft/converter/converter_fr.properties
+++ b/properties/com/jidesoft/converter/converter_fr.properties
@@ -3,9 +3,14 @@
 #
 Boolean.true=Oui
 Boolean.false=Non
-Font.plain=
+
+#
+#Strings for FontConverter
+#
+Font.plain=Plain
 Font.bold=Gras
 Font.italic=Italique
+Font.boldItalic=GrasItalique
 
 #
 #Strings for QuarterConverter
