Grids,B,group_fr.properties,Fixed the French translation issue,47677,yes Grids,B,converter_fr.properties,Fixed the French translation issue,47677,yes
git-svn-id: https://svn.java.net/svn/jide-oss~svn/branches/trunk_2.8.x@1534 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/converter/converter_fr.properties
+++ b/properties/com/jidesoft/converter/converter_fr.properties
@@ -3,6 +3,16 @@
 #
 Boolean.true=Oui
 Boolean.false=Non
-Font.plain=
+
+#
+#Strings for FontConverter
+#
+Font.plain=Plain
 Font.bold=Gras
 Font.italic=Italique
+Font.boldItalic=GrasItalique
+
+#
+#Strings for QuarterConverter
+#
+Quarter.quarter=Tr {0}
