russian translation, no
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1574 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/converter/converter_ru.properties
+++ b/properties/com/jidesoft/converter/converter_ru.properties
@@ -13,3 +13,4 @@ Font.italic=\u041a\u0443\u0440\u0441\u0438\u0432
 Font.boldItalic=\u0416\u0438\u0440\u043d\u044b\u0439\u041a\u0443\u0440\u0441\u0438\u0432
 
 
+Quarter.quarter = \u041A\u0432\u0440\u0442. {0}
