--- a/properties/com/jidesoft/plaf/basic/basic_zh_TW.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_zh_TW.properties
@@ -34,6 +34,8 @@ Undo.moving=\u79fb\u52d5
 Undo.toggleAutohide=\u5207\u63db\u81ea\u52d5\u96b1\u85cf/\u505c\u99d0\u6a21\u5f0f
 CollapsiblePane.collapseText=\u5c55\u958b/\u6536\u5408
 CollapsiblePane.collapseToolTip=\u5c55\u958b\u6216\u6536\u5408\u5167\u5bb9
-JideTabbedPane.close=\u95dc\u9589
 JideTabbedPane.scrollBackward=\u524d\u6efe
 JideTabbedPane.scrollForward=\u540e\u6efe
+JideTabbedPane.showList=\u663e\u793a\u5217\u8868
+JideTabbedPane.close=\u95dc\u9589
+
