update some translations
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1686 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/plaf/basic/basic_fi.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_fi.properties
@@ -42,8 +42,13 @@ DockableFrameTitlePane.autohidableMnemonic=U
 Undo.resizing=Koon muuttaminen
 # Strings for CollapsiblePane
 CollapsiblePane.collapseText=Laajenna/kutista
+CollapsiblePane.collapseToolTip=Laajenna tai kutista sis\u00e4lt\u00f6
 # Strings for JideTabbedPane
+JideTabbedPane.scrollBackward=Vierit\u00e4 taaksep\u00e4in
+JideTabbedPane.scrollForward=Vierit\u00e4 eteenp\u00e4in
+JideTabbedPane.showList=N\u00e4yt\u00e4 luettelo
 JideTabbedPane.close=Sulje
+
 
 
 
