--- a/properties/com/jidesoft/plaf/basic/basic_it.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_it.properties
@@ -62,3 +62,12 @@ Undo.moving=Spostamento
 #
 CollapsiblePane.collapseText=Espandi/Riduci
 CollapsiblePane.collapseToolTip=Espande o riduce il contenuto
+
+#
+# Tabbed Pane
+#
+JideTabbedPane.scrollBackward=Scorri indietro
+JideTabbedPane.scrollForward=Scorri avanti
+JideTabbedPane.showList=Mostra lista
+JideTabbedPane.close=Chiudi
+
