--- a/properties/com/jidesoft/plaf/basic/basic_pt.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_pt.properties
@@ -54,5 +54,14 @@ Undo.moving=Mover
 #
 # Strings for CollapsiblePane
 #
-CollapsiblePane.collapseText=Expandir/reduzir
-CollapsiblePane.collapseToolTip=Expandir ou reduzir o conte\u00fado
+CollapsiblePane.collapseText=Abrir/Fechar
+CollapsiblePane.collapseToolTip=Abrir ou fechar conte\u00fado
+
+#
+# Tabbed Pane
+#
+JideTabbedPane.scrollBackward=Percorrer para tr\u00e1s
+JideTabbedPane.scrollForward=Percorrer para a frente
+JideTabbedPane.showList=Mostrar lista
+JideTabbedPane.close=Fechar
+
