--- a/properties/com/jidesoft/plaf/basic/basic_sv.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_sv.properties
@@ -55,3 +55,12 @@ Undo.moving=Flyttar
 #
 CollapsiblePane.collapseText=Expandera/komprimera
 CollapsiblePane.collapseToolTip=Expandera eller komprimera inneh\u00e5llet
+
+#
+# Tabbed Pane
+#
+JideTabbedPane.scrollBackward=Bl\u00e4ddra bak\u00e5t
+JideTabbedPane.scrollForward=Bl\u00e4ddra fram\u00e5t
+JideTabbedPane.showList=Visa lista
+JideTabbedPane.close=St\u00e4ng
+
