--- a/properties/com/jidesoft/plaf/basic/folderChooser_zh_TW.properties
+++ b/properties/com/jidesoft/plaf/basic/folderChooser_zh_TW.properties
@@ -12,3 +12,5 @@ FolderChooser.toolbar.home=\u9078\u4e2d\u4e3b\u76ee\u9304
 FolderChooser.toolbar.mydocuments=\u9078\u4e2d\u6211\u7684\u6587\u6a94
 FolderChooser.toolbar.delete=\u522a\u9664\u9078\u4e2d\u76ee\u9304
 FolderChooser.toolbar.new=\u5728\u9078\u4e2d\u7684\u76ee\u9304\u4e0b\u5efa\u7acb\u65b0\u76ee\u9304
+FolderChooser.toolbar.recent=\u6700\u8fd1\uff1a
+FolderChooser.toolbar.refresh=\u5237\u65b0\u76ee\u9304\uff1a
