--- a/properties/com/jidesoft/plaf/basic/folderChooser_zh_CN.properties
+++ b/properties/com/jidesoft/plaf/basic/folderChooser_zh_CN.properties
@@ -20,3 +20,5 @@ FolderChooser.toolbar.home=\u9009\u4e2d\u4e3b\u76ee\u5f55
 FolderChooser.toolbar.mydocuments=\u9009\u4e2d\u6211\u7684\u6587\u6863
 FolderChooser.toolbar.delete=\u5220\u9664\u9009\u4e2d\u76ee\u5f55
 FolderChooser.toolbar.new=\u5728\u9009\u4e2d\u7684\u76ee\u5f55\u4e0b\u5efa\u7acb\u65b0\u76ee\u5f55
+FolderChooser.toolbar.refresh=\u5237\u65b0\u76ee\u5f55
+FolderChooser.toolbar.recent=\u6700\u8fd1\uff1a:
